--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "crypto-js": "^4.0.0",
     "vue": "^2.6.11",
+    "vue-cryptojs": "^2.1.5",
     "vue-router": "^3.5.1",
+    "vue-svg-loader": "^0.12.0-alpha.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -22,7 +23,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
