--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
