--- a/back/package.json
+++ b/back/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
