--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "emailjs": "^3.7.0"
+    "emailjs": "^3.7.0",
+    "nodemailer": "^6.7.2"
   }
 }
